[package]
name = "heliotrope-rs"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
description = "heliotrope-rs"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
serde_json = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
blob = "0.3.0"